Mragin chengaed to padding to avoid white gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Poppins&display=swap');
 
 * {
-  box-sizing: border-box;
   font-family: 'Inter', sans-serif;
 }
 
@@ -407,6 +406,7 @@
   grid-template-rows: auto;
   grid-template-columns: 1fr 70% 1fr;
   padding: 20px;
+  margin-top: 0;
   background: linear-gradient(white, rgb(179, 179, 187), rgb(98, 98, 98),#343434);
 }
 
@@ -708,7 +708,7 @@ ul a {
   }
 
   .project-links {
-    margin: 2rem 8rem 2rem 10rem;
+    padding: 2rem 8rem 2rem 10rem;
   }
 
   #contact-form {
